fixed layout bug

--- a/client/src/css/registerCreative.css
+++ b/client/src/css/registerCreative.css
@@ -1,6 +1,9 @@
+.main-container {
+  height: 100%;
+}
 .register-creative-body {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-grow: 1;
   align-items: center;
@@ -186,9 +189,10 @@
 }
 .register-container {
   width: 66.6%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
+  margin-bottom: 40px;
 }
 .input-container {
   width: 50%;
@@ -213,7 +217,7 @@
   display: flex;
   justify-content: center;
   color: #606a6c;
-  margin: 60px 0px;
+  margin: 40px 0px;
 }
 .select-categories-label {
   width: 280px;
@@ -379,22 +383,22 @@
   flex-direction: column;
 }
 .select-category-frame {
-  width: 440px;
+  width: 400px;
   height: 180px;
   background-color: #e1e1e1;
   border-radius: 5px;
 }
 .select-category-container {
-  width: 440px;
+  width: 400px;
   height: 180px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   box-shadow: 5px 5px 10px 0px #d2d2d2;
 }
 .category-button {
-  width: 200px;
+  width: 180px;
   height: 40px;
   background-color: #c4c4c4;
   border-radius: 5px;
